# analysis-advanced-chunking-techniques

./: .gitignore  docling-chunker.ipynb  docling-converter.ipynb  docling-converter.py  docling-tutorial.ipynb  gliner-metadata.ipynb  pdf_tools.ipynb  pyproject.toml  qwen-semantic-chunking.ipynb  spacy-metadata.ipynb
data/input/: Wniosek_o_udzielenie_kredytu_mieszkaniowego.docx  Wniosek_o_udzielenie_zmiane_warunkow_kredytu.docx
data/output/: DocLayNet-embedded.md  DocLayNet-with-images.md  DocLayNet.md  DocLayNet_with_images_and_metadata.md  DocLayNet_with_metadata.md  DoclayNet-chunked-with-metadata.md  IKO-embedded.md  IKO-hybrid-chunked.md  Przewodnik_IKO_2023_10-placeholder.md  Regulamin_rachunkow_bankowych-embedded.md  Regulamin_rachunkow_bankowych-placeholder.md  Wniosek_o_udzielenie_kredytu_mieszkaniowego-embedded.md  Wniosek_o_udzielenie_zmiane_warunkow_kredytu-embedded.md
