[tool.poetry]
name = "analysis-advanced-chunking-techniques"
version = "0.1.0"
description = ""
authors = ["Martyna <rachanczykmartyna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
docling = ">=2.15.1,<3.0.0"
jupyter = ">=1.1.1,<2.0.0"
ipywidgets = ">=8.1.5,<9.0.0"
transformers = ">=4.48.0,<5.0.0"
accelerate = ">=1.2.1,<2.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
gliner = ">=0.2.15,<0.3.0"
torch = ">=2.5.1,<3.0.0"
spacy = "^3.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
